--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/ProfileWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/ProfileWindow.xaml
@@ -4,9 +4,272 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco.View"
+        xmlns:c="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco.Helper"
+        xmlns:vm="clr-namespace:Nedeljni_V_Kristina_Garcia_Francisco.Model"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="ProfileWindow" Height="450" Width="800">
+        Title="Profile"
+        Height="620"
+        Width="1000"
+        ResizeMode="NoResize"
+        WindowStyle="None"
+        WindowState="Maximized"
+        ShowInTaskbar="True"
+        AllowsTransparency="True"
+        Background="Transparent"
+        WindowStartupLocation="CenterOwner">
+    <Window.Resources>
+        <c:UsernameIDConverter x:Key="UsernameIDConverter" />
+    </Window.Resources>
     <Grid>
-        
+        <Border BorderBrush="#505050"
+                x:Name="border"
+                Height="620"
+                Width="400"
+                BorderThickness="3">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid Margin="0"
+                      Grid.Column="0"
+                      Background="White">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="80"></RowDefinition>
+                        <RowDefinition Height="30"></RowDefinition>
+                        <RowDefinition Height="70"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="30"></RowDefinition>
+                        <RowDefinition Height="60"></RowDefinition>
+                        <RowDefinition Height="80*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Stretch"
+                               VerticalAlignment="Stretch"
+                               Grid.Row="0"
+                               Background="#505050">
+            <Label x:Name="lblTitle"
+                        Foreground="{StaticResource PrimaryHueMidBrush}"
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Stretch"
+                        BorderBrush="#89000000"
+                        FontSize="36"
+                        FontWeight="Bold"
+                        Width="395"
+                        Content="Profile">
+               
+            </Label></TextBlock>
+                    <Button
+                        x:Name="Exit"
+                        Command="{Binding Exit, UpdateSourceTrigger=PropertyChanged}"
+                        Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"
+                        ToolTip="Exit App"
+                        BorderBrush="#FFC34A4A"
+                        Background="#FFC34A4A"
+                        Height="22"
+                        Width="22"
+                        Visibility="Visible"
+                        HorizontalAlignment="Left" Margin="10,10,0,38">
+                        <materialDesign:PackIcon Kind="Close"
+                                             Height="16"
+                                             Width="16" />
+                    </Button>
+                    <Grid Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBox x:Name="txtFirstName" 
+                                 HorizontalAlignment="Left"
+                                 materialDesign:HintAssist.Hint="First Name"
+                                 Width="130"
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.FirstName, UpdateSourceTrigger=PropertyChanged}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 Margin="0,0,17,0"
+                                 MaxLength="40"
+                                 IsEnabled="False"
+                                 SelectionBrush="#FF8BC34A" />
+                        <TextBox x:Name="txtLastName" 
+                                 HorizontalAlignment="Right"
+                                 materialDesign:HintAssist.Hint="Last Name"
+                                 Width="130"                              
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.LastName, UpdateSourceTrigger=PropertyChanged}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 Margin="17,0,0,0"
+                                 MaxLength="40"
+                                 IsEnabled="False"
+                                 SelectionBrush="#FF8BC34A" ></TextBox>
+                    </StackPanel>
+                    <TextBox x:Name="txtEmail" Grid.Row="3"
+                                 materialDesign:HintAssist.Hint="Email"
+                                 HorizontalAlignment="Center"
+                                 Width="300"
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 MaxLength="40"
+                                 ToolTip="Example: test@test.com"
+                                 IsEnabled="False"
+                                 SelectionBrush="#FF8BC34A" />
+                    <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBox x:Name="txtDateOfBirth" 
+                                 HorizontalAlignment="Left"
+                                 materialDesign:HintAssist.Hint="Date of Birth"
+                                 Width="130"                              
+                                 HorizontalContentAlignment="Left"
+                                 IsEnabled="False"
+                                 Text="{Binding User.DateOfBirth, StringFormat=\{0:dd.MM.yyyy\}, UpdateSourceTrigger=PropertyChanged}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 Margin="0,0,17,0"
+                                 MaxLength="40"
+                                 SelectionBrush="#FF8BC34A" ></TextBox>
+                        <TextBox x:Name="txtGender" 
+                                 HorizontalAlignment="Right"
+                                 materialDesign:HintAssist.Hint="Gender"
+                                 Width="130"            
+                                 IsEnabled="False"
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.Gender, UpdateSourceTrigger=PropertyChanged}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 Margin="17,0,0,0"
+                                 MaxLength="40"
+                                 SelectionBrush="#FF8BC34A" ></TextBox>
+                    </StackPanel>
+                    <TextBox x:Name="txtAddress" Grid.Row="5"
+                                 materialDesign:HintAssist.Hint="Address"
+                                 HorizontalAlignment="Center"
+                                 Width="300"
+                                 MaxLength="50"
+                                 IsEnabled="False"
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.UserLocation, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 SelectionBrush="#FF8BC34A" />
+                    <Button Grid.Row="7" Grid.Column="1"
+                                    x:Name="btnIzlaz"
+                                    Style="{StaticResource MaterialDesignRaisedButton}"
+                                    materialDesign:ButtonAssist.CornerRadius="20"
+                                    ToolTip="Show Posts"
+                                    Margin="5,0,5,0"
+                                    Width="130"
+                                    Height="35"
+                                    Command="{Binding PostPreview, UpdateSourceTrigger=PropertyChanged}"
+                                    BorderBrush="{x:Null}">Friend Posts</Button>
+                </Grid>
+                <Grid Margin="0"
+                      Grid.Column="1"
+                      x:Name="IngredientGrid"
+                      Visibility="{Binding ViewPost, UpdateSourceTrigger=PropertyChanged}"
+                      Background="White">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="80"></RowDefinition>
+                        <RowDefinition Height="20"></RowDefinition>
+                        <RowDefinition Height="450"></RowDefinition>
+                        <RowDefinition Height="50*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="1"
+                          Panel.ZIndex="1"
+                          Background="White"></Grid>
+                    <Grid x:Name="StackPanelMain"
+                          Grid.Row="2"
+                          HorizontalAlignment="Center"
+                          Background="White"
+                          Height="450"
+                          VerticalAlignment="Top"></Grid>
+                    <Rectangle Grid.Row="2"
+                               Grid.RowSpan="1"
+                               VerticalAlignment="Stretch"
+                               HorizontalAlignment="Left"
+                               Fill="#505050"
+                               Margin="0,0,0,0"
+                               Width="3" />
+                    <Rectangle Grid.Row="2"
+                               Grid.RowSpan="1"
+                               VerticalAlignment="Stretch"
+                               HorizontalAlignment="Left"
+                               Fill="{StaticResource PrimaryHueMidBrush}"
+                               Margin="-3 0 0 0"
+                               Width="3" />
+                    <TextBlock HorizontalAlignment="Stretch"
+                               VerticalAlignment="Stretch"
+                               Grid.Row="0"
+                               Panel.ZIndex="1"
+                               Background="{StaticResource PrimaryHueMidBrush}">
+            <Label x:Name="lblAllPosts"
+                        Background="{StaticResource PrimaryHueMidBrush}"
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Stretch"
+                        BorderBrush="#89000000"
+                        FontSize="36"
+                        Foreground="#505050"
+                        FontWeight="Bold"
+                        Width="590"
+                        Content="Posts">
+               
+            </Label></TextBlock>
+
+                    <ListView Grid.Row="2" Name="DataGridPost" ItemsSource="{Binding PostList, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Post, UpdateSourceTrigger=PropertyChanged}" Margin="30,0,0,0">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border BorderThickness="3" BorderBrush="#505050">
+                                    <StackPanel>
+                                        <Grid Height="170" Width="500">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="30"></RowDefinition>
+                                                <RowDefinition Height="100"></RowDefinition>
+                                                <RowDefinition Height="20"></RowDefinition>
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Grid.Row="0"
+                                           Margin="30 0 0 0"
+                                           FontWeight="Bold"
+                                           FontSize="20"
+                                           Text="{Binding UserID, Converter={StaticResource ResourceKey=UsernameIDConverter}}"
+                                           VerticalAlignment="Center"></TextBlock>
+                                            <TextBlock Grid.Row="1"
+                                           Margin="20"
+                                           FontSize="16"
+                                           Text="{Binding PostText}"
+                                           FontWeight="Light"
+                                           TextWrapping="Wrap"></TextBlock>
+                                            <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                                <TextBlock 
+                                           Margin="20 0 0 0"
+                                           FontSize="12"
+                                           Text="{Binding NumberOfLikes, StringFormat='Total Likes: {0}'}"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"></TextBlock>
+                                                <TextBlock
+                                           Margin="20 0 0 0"
+                                           FontSize="12"
+                                           Text="{Binding DateOfPost, StringFormat=\{0:dd.MM.yyyy\}}"
+                                           VerticalAlignment="Center"                               
+                                           HorizontalAlignment="Right"></TextBlock>
+                                            </StackPanel>
+                                        </Grid>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
