--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/UserWindow.xaml
@@ -19,6 +19,9 @@
     <Window.Resources>
         <c:UsernameIDConverter x:Key="UsernameIDConverter" />
         <c:TotalNumberVisibleConverter x:Key="TotalNumberVisibleConverter" />
+        <c:LikeButtonVisibleConverter x:Key="LikeButtonVisibleConverter" />
+        <c:CanLikeConverter x:Key="CanLikeConverter" />
+        <c:LikeButtonContentConverter x:Key="LikeButtonContentConverter" />
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -318,7 +321,7 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="30"></RowDefinition>
                                         <RowDefinition Height="100"></RowDefinition>
-                                        <RowDefinition Height="20"></RowDefinition>
+                                        <RowDefinition Height="40"></RowDefinition>
                                     </Grid.RowDefinitions>
                                     <TextBlock Grid.Row="0"
                                            Margin="30 0 0 0"
@@ -326,6 +329,12 @@
                                            FontSize="20"
                                            Text="{Binding UserID, Converter={StaticResource ResourceKey=UsernameIDConverter}}"
                                            VerticalAlignment="Center"></TextBlock>
+                                    <TextBlock Grid.Row="0"
+                                           Margin="0,20,20,0"
+                                           FontSize="12"
+                                           Text="{Binding DateOfPost, StringFormat=\{0:dd.MM.yyyy\}}"
+                                           VerticalAlignment="Center"                               
+                                           HorizontalAlignment="Right"></TextBlock>
                                     <TextBlock Grid.Row="1"
                                            Margin="20"
                                            FontSize="16"
@@ -333,6 +342,22 @@
                                            FontWeight="Light"
                                            TextWrapping="Wrap"></TextBlock>
                                     <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                        <Button x:Name="btnLikePost"
+                                            Style="{StaticResource MaterialDesignRaisedButton}"
+                                            materialDesign:ButtonAssist.CornerRadius="20"
+                                            ToolTip="Like Post"
+                                            Margin="20,0,0,10"
+                                            HorizontalAlignment="Left"
+                                            Width="100"
+                                            Foreground="White"
+                                            Visibility="{Binding UserID, Converter={StaticResource LikeButtonVisibleConverter}}"
+                                            Command="{Binding DataContext.LikePost, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
+                                            IsEnabled="{Binding PostID, Converter={StaticResource CanLikeConverter}}"
+                                            Height="30"
+                                            Background="#FF8BC34A"
+                                            VerticalAlignment="Bottom"
+                                            Content="{Binding PostID, Converter={StaticResource LikeButtonContentConverter}}"
+                                            BorderBrush="{x:Null}"></Button>
                                         <TextBlock 
                                            Margin="20 0 0 0"
                                            FontSize="12"
@@ -340,12 +365,6 @@
                                            VerticalAlignment="Center"                                       
                                            Visibility="{Binding UserID, Converter={StaticResource TotalNumberVisibleConverter}}"
                                            HorizontalAlignment="Left"></TextBlock>
-                                        <TextBlock
-                                           Margin="20 0 0 0"
-                                           FontSize="12"
-                                           Text="{Binding DateOfPost, StringFormat=\{0:dd.MM.yyyy\}}"
-                                           VerticalAlignment="Center"                               
-                                           HorizontalAlignment="Right"></TextBlock>
                                     </StackPanel>
                                 </Grid>
                             </StackPanel>
